--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     padding-top: 10%;
     overflow: hidden;
 }
